add auth feature to integrations
